# cad_viewer

./: .gitignore  CLAUDE.md  Cargo.toml
src/: app.rs  main.rs
src/cad/: dxf_loader.rs  gds_loader.rs  mod.rs  model.rs  selection.rs  snap.rs
src/render/: camera.rs  mod.rs  pipeline.rs  tessellator.rs
src/ui/: viewport.rs
src/util/: color.rs
