[package]
name = "cad_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "wgpu",
    "default_fonts",
    "accesskit",
] }
egui = "0.29"
log = "0.4"
env_logger = "0.11"
dxf = "0.6"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
gds21 = "3.0.0-pre.2"
earcutr = "0.4"
rayon = "1"

[profile.release]
opt-level = 3
lto = true

[package.metadata.bundle]
name = "CAD Viewer"
identifier = "com.cadviewer.app"
icon = ["assets/icon.icns"]
version = "0.1.0"
copyright = "2026"
category = "public.app-category.graphics-design"
short_description = "A fast CAD file viewer for macOS"
osx_minimum_system_version = "13.0"
